--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <table class="table table-hover mt-3">
+      <table class="table table-warning table-striped-columns table-hover mt-3">
         <thead>
           <th>Araba Adı</th>
           <th>Vites Türü</th>
           <th>Araba Kategorisi</th>
           <th>Arabanın Modeli</th>
+          <th>Kiralama Ücreti(Günlük)</th>
         </thead>
         <tbody>
           <tr *ngFor="let araba of arabalar">
@@ -14,6 +15,7 @@
             <td>{{ araba.vites }}</td>
             <td>{{ araba.arabakategorisi }}</td>
             <td>{{ araba.arabamodel }}</td>
+            <td>{{ araba.kirucret }} TL</td>
             <td>
               <button class="btn btn-info" (click)="Goruntule(araba, modal)">
                 Aracı Görüntüle
@@ -38,9 +40,25 @@
           <div class="modal-body">
             <img class="img-fluid" src="{{ imgUrl }}" />
           </div>
-          <div class="modal-footer">
+          <div class="modal-footer me-5">
+            <ul>
+              <li>{{ arabaadi }}</li>
+            </ul>
+            <ul>
+              <li>{{ arabamodel }}</li>
+            </ul>
+            <ul>
+              <li>{{ vites }}</li>
+            </ul>
+            <ul>
+              <li>{{ yakit }}</li>
+            </ul>
+            <ul>
+              <li>Kiralama Bedeli : {{ kirucret }} TL/Gün</li>
+            </ul>
+
             <button
-              type="button"
+              type="button "
               class="btn btn-secondary"
               data-bs-dismiss="modal"
             >
